syntax = "proto3";

package task_service;

option java_multiple_files = true;
option java_package = "com.risingwave.proto.computenode";
option optimize_for = SPEED;

import "common.proto";
import "data.proto";
import "plan.proto";

message TaskInfo {
  enum TaskStatus {
    NOT_FOUND = 0;
    PENDING = 1;
    RUNNING = 2;
    FAILING = 3;
    CANCELLING = 4;
    FINISHED = 5;
    FAILED = 6;
  }
  plan.TaskId task_id = 1;
  TaskStatus task_status = 2;
}

message CreateTaskRequest {
  plan.TaskId task_id = 1;
  plan.PlanFragment plan = 2;
  uint64 epoch = 3;
}

message CreateTaskResponse {
  common.Status status = 1;
}

message AbortTaskRequest {
  plan.TaskId task_id = 1;
  bool force = 2;
}

message AbortTaskResponse {
  common.Status status = 1;
}

message GetTaskInfoRequest {
  plan.TaskId task_id = 1;
}

message GetTaskInfoResponse {
  common.Status status = 1;
  TaskInfo task_info = 2;
}

message GetDataResponse {
  common.Status status = 1;
  data.DataChunk record_batch = 2;
}

message GetStreamRequest {
  uint32 up_fragment_id = 1;
  uint32 down_fragment_id = 2;
}

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTaskInfo(GetTaskInfoRequest) returns (GetTaskInfoResponse);
  rpc AbortTask(AbortTaskRequest) returns (AbortTaskResponse);
}

message GetDataRequest {
  plan.TaskSinkId sink_id = 1;
}

message GetStreamResponse {
  data.StreamMessage message = 1;
}

service ExchangeService {
  rpc GetData(GetDataRequest) returns (stream GetDataResponse);
  rpc GetStream(GetStreamRequest) returns (stream GetStreamResponse);
}
